# ha-sonance-py

./: LICENSE  README.md  hacs.json  main.py  pyproject.toml
.github/workflows/: hass_validate.yml  hassfest.yml  lint.yml  typecheck.yml
custom_components/: __init__.py
custom_components/sonancedsp/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  media_player.py  strings.json
custom_components/sonancedsp/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_media_player.py
